@@ -1,5 +1,8 @@
 2011-02-02 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/core/na-updater.c:
+	* src/core/na-updater.h (na_updater_are_preferences_locked): New function.
+
 	Homogeneize marshalling
 
 	* src/core/na-marshal: Renamed as src/core/na-marshal.def
